# robocup

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  KickP.py  README.md  Untitled Document  _Goalie_.py  behavior.py  bs.py  callRef.py  composite_behavior.py  coordinated-pass.py  defending.py  fsm.py  goalie_vs_attacker.py  k=1x.txt  k=2y.txt  k=4d=0.0003x.txt  k=4d=0.5x.txt  k=4d=0.5y.txt  k=5x.txt  k=8x.txt  main_gui.py  path_listener.py  pid.txt  plot.py  random-opp.py  rc.py  robocup-ssl-cam-x-backup.xml  robocup-ssl.xml  run_goalie.py  run_gui.py  setup.sh  team.py  test_DribbleKick.py  test_Dribble_Kick.py  test_GoToPoint.py  test_Kick.py  test_KickToP.py  (+12 more)
Digraph/: GoToBall  Goalie
GUI/: interfacePath.py  interfacePath1.py  ompl_gui.py  self_RRT.py  task.py  task.ui  taskcsgo.py  taskgo.py
GUI_python/: interfacePath.py  ompl_gui.py  self_RRT.py
RRT/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
behavior-fsm/: README.md  _GoToPoint.py  behavior.py  fsm.py  pid.py  profiler.py  pso.py  run.py  test_GoToPoint.py
belief_state/: CMakeLists.txt  Makefile  README.md  package.xml
bot_comm/: CMakeLists.txt  README.md  package.xml
bot_tune/: data_check.txt  k=0x.txt  k=0y.txt  k=2x.txt  k=2y.txt  k=3_5d=0001x.txt  k=3_5d=0001y.txt  k=3_5d=0003x.txt  k=3_5d=0003y.txt  k=3_5x.txt  k=3_5y.txt  k=3x.txt  k=3y.txt  k=4x.txt  k=4y.txt  k=5x.txt  k=5y.txt
bot_tune1/: k=3d=0001x.txt  k=3d=0001y.txt  k=3d=0003x.txt  k=3d=0003y.txt  k=3x.txt  k=3y.txt
grSim/: package.xml
grsim_comm/: CMakeLists.txt  README.md  package.xml
grsim_tuned/: k=0x.txt  k=0y.txt  k=1y.txt  k=2x.txt  k=3x.txt  k=3y.txt  k=4d=0.0001x.txt  k=4d=0.0001y.txt  k=4d=0.0003x.txt  k=4d=0.0003y.txt  k=4d=0.001x.txt  k=4d=0.001y.txt  k=4d=0.005x.txt  k=4d=0.005y.txt  k=4x.txt  k=4y.txt  k=5y.txt  k=8y.txt
kgpkubs_launch/: CMakeLists.txt  README.md  package.xml
krssg_ssl_msgs/: CMakeLists.txt  README.md  package.xml
kubs/: README.md  cmd_node.py  kubs.py
mSc_planner/: CMakeLists.txt  README.md
old_GUI/: InterfacePath_ompl.py  ompl_gui.py
ompl_planner/: CMakeLists.txt  Readme.md  package.xml
ompl_planner/include/: MotionPlanner.h
ompl_planner/include/listener/: MotionPlanner.h
ompl_planner/src/: MotionPlanner.cpp  MotionPlanner.h  listener.cpp
pathPlannerGui/: guiPath.py  interfacePath.py
plays_py/: .travis.yml  README.md  REQUIRE  package.xml
referee_comm/: CMakeLists.txt  package.xml
role/: DribbleKick.py  Dribble_Kick.py  GoToBall.py  GoToBall__.py  GoToPoint.py  KIcktoPoint1.py  Kick.py  KickToPoint.py  Pass_Receive.py  README.md  Referee.py  SingleFSM.py  _GoToPoint.py  _GoToPoint_.py  _turnAround_.py  allignTowardsPoint.py  attackers.py  bottom.py  defenders.py  mid.py  pass_and_receive.py  pass_receive.py  random1.py  sGoalie.py  skills_union.py  top.py
src/: referee_node.cpp  robocup_ssl_client.cpp
src/grsim_comm/: CMakeLists.txt
src/grsim_comm/include/proto/: grSim_Packet.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  sslDebug_Data.pb.h  sslDebug_Data.proto
src/grsim_comm/src/: grsim_xyw_node.cpp
src/robojackets/: CMakeLists.txt  README.md  package.xml
src/robojackets/include/robojackets/: Configuration.cpp  Configuration.hpp  Constants.hpp  MotionControl.hpp  RobotConfig.hpp  Utils.hpp  moc_Configuration.cpp
src/robojackets/include/robojackets/Geometry2d/: Arc.hpp  Circle.hpp  CompositeShape.hpp  Line.hpp  Point.hpp  Polygon.hpp  Rect.hpp  Segment.hpp  Shape.hpp  ShapeSet.hpp  TransformMatrix.hpp
src/robojackets/include/robojackets/planning/: InterpolatedPath.hpp  MotionCommand.hpp  MotionConstraints.hpp  MotionInstant.hpp  Path.hpp  RRTPlanner.hpp  RotationCommand.hpp  RotationConstraints.hpp  SingleRobotBezierPathPlanner.hpp  SingleRobotPathPlanner.hpp  Tree.hpp  Util.hpp  dijkstra.hpp  recursivePlanner.hpp  visibility.hpp
src/robojackets/src/: Field_Dimensions.cpp  MotionControl.cpp  test.cpp  visibility_graph.cpp
src/robojackets/src/Geometry2d/: Arc.cpp  Circle.cpp  CompositeShape.cpp  Line.cpp  Polygon.cpp  Rect.cpp  Segment.cpp  TransformMatrix.cpp
src/robojackets/src/planning/: InterpolatedPath.cpp  MotionConstraints.cpp  Path.cpp  RRTPlanner.cpp  SingleRobotBezierPathPlanner.cpp  SingleRobotPathPlanner.cpp  Tree.cpp  Util.cpp  dijkstra.cpp  recursivePlanner.cpp  visibility.cpp
src/tactics/: CMakeLists.txt  README.md  package.xml
src/tactics/include/tactics/: tAttackSupport1_Center.hpp  tAttackSupport1_Wing.hpp  tDefendARC.hpp  tDefendARC_left.hpp  tDefendARC_right.hpp  tDribbleTurnPass.h  tGoToBall.hpp  tGoalie.hpp  tIntercept.hpp  tKickToGoal.hpp  tMark.hpp  tPass.hpp  tPassToPoint.hpp  tPosition.hpp  tReceive.hpp  tStop.hpp  tactic.h  tactic_factory.h  test_msg.h
src/tactics/msg/: TacticData.msg
src/tactics/src/: tAttackSupport1_Center.cpp  tAttackSupport1_Wing.cpp  tDefendARC.cpp  tDefendARC_left.cpp  tDefendARC_right.cpp  tDribbleTurnPass.cpp  tGoToBall.cpp  tGoalie.cpp  tGoalie_bakwass.cpp  tIntercept.cpp  tKickToGoal.cpp  tMark.cpp  tPassToPoint.cpp  tPosition.cpp  tReceive.cpp  tStop.cpp  tactic.cpp  tactic_factory.cpp  test_custom_msg.cpp  test_custom_msg_sub.cpp  test_json.cpp  test_json_sub.cpp
ssl-vision/: CMakeLists.txt  README.md  robocup-ssl-cam-0-lut-yuv.xml  robocup-ssl-teams.xml  robocup-ssl-teams.xml.backup  robocup-ssl.xml
ssl_common/: CMakeLists.txt  README.md  package.xml
tactics/: CoPass.py  Goalie.py  Goalie_2.py  Triangle_Pass.py  _Goalie_.py  _Goalie__.py  sample_tactic.py
tests/: __init__.py  pid_tune.py
utils/: Readme.md  config.py  functions.py  geometry.py  math_functions.py  moveRobot.py  state_functions.py  (+1 more)
vision_comm/: CMakeLists.txt  README.md  package.xml
vision_comm/include/: class_node.hpp  kalman.hpp  node.hpp
vision_comm/include/proto/: messages_robocup_ssl_geometry.proto  messages_robocup_ssl_wrapper.proto
vision_comm/msg/: SSL_DetectionBall.msg  SSL_DetectionFrame.msg
vision_comm/src/: class_node.cpp  kalman.cpp  kalman_filter.py  node.cpp  robocup_ssl_client.cpp  svg_filter.py  vision_node.cpp
(+17011 files in other folders)
